--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
     />
 
     <!-- Scripts -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -48,21 +44,19 @@
         <input class="tasksInput" type="text" />
         <button class="addTaskButton">Add</button>
 
-          <select class="sortTasks" name="sortTasks">
-            <option value="all">All</option>
-            <option value="completed">Completed</option>
-            <option value="deleted">Deleted</option>
-          </select>
+        <select class="sortTasks" name="sortTasks">
+          <option value="all">All</option>
+          <option value="completed">Completed</option>
+          <option value="deleted">Deleted</option>
+        </select>
       </div>
 
-      <div class="errorMessage">Error</div>
+      <div class="errorMessage hidden">Error</div>
 
       <div class="tasksContainer">
-        <div class="taskElement toDO" state="toDo">
+        <div class="taskElement toDO" state="toDo" id="0">
           <div class="deletedTaskLine"></div>
-          <div class="taskContent">
-            Task to do
-          </div>
+          <div class="taskContent">Task to do</div>
           <button class="taskCheckButton">
             <i class="fa-solid fa-check"></i>
           </button>
@@ -71,11 +65,9 @@
           </button>
         </div>
 
-        <div class="taskElement completed" state="completed">
+        <div class="taskElement completed" state="completed" id="1">
           <div class="deletedTaskLine"></div>
-          <div class="taskContent">
-            Task to do
-          </div>
+          <div class="taskContent">Task to do</div>
           <button class="taskCheckButton">
             <i class="fa-solid fa-check"></i>
           </button>
@@ -84,11 +76,9 @@
           </button>
         </div>
 
-        <div class="taskElement deleted" state="deleted">
+        <div class="taskElement deleted" state="deleted" id="2">
           <div class="deletedTaskLine"></div>
-          <div class="taskContent">
-            Task to do
-          </div>
+          <div class="taskContent">Task to do</div>
           <button class="taskCheckButton">
             <i class="fa-solid fa-check"></i>
           </button>
