--- a/index.html
+++ b/index.html
@@ -55,40 +55,7 @@
 
       <div class="errorMessage hidden">Error</div>
 
-      <div class="tasksContainer">
-        <!-- <div class="taskElement toDO" state="toDo" id="0">
-          <div class="deletedTaskLine"></div>
-          <div class="taskContent">Task to do</div>
-          <button class="taskCheckButton">
-            <i class="fa-solid fa-check"></i>
-          </button>
-          <button class="deleteTaskButton">
-            <i class="fa-solid fa-x"></i>
-          </button>
-        </div>
-
-        <div class="taskElement completed" state="completed" id="1">
-          <div class="deletedTaskLine"></div>
-          <div class="taskContent">Task to do</div>
-          <button class="taskCheckButton">
-            <i class="fa-solid fa-check"></i>
-          </button>
-          <button class="deleteTaskButton">
-            <i class="fa-solid fa-x"></i>
-          </button>
-        </div>
-
-        <div class="taskElement deleted" state="deleted" id="2">
-          <div class="deletedTaskLine"></div>
-          <div class="taskContent">Task to do</div>
-          <button class="taskCheckButton">
-            <i class="fa-solid fa-check"></i>
-          </button>
-          <button class="deleteTaskButton">
-            <i class="fa-solid fa-x"></i>
-          </button>
-        </div> -->
-      </div>
+      <div class="tasksContainer"></div>
     </div>
   </body>
 </html>
